# serverdensity-udp-agent

./: .gitignore  Cargo.toml  Makefile  client.php  composer.json  metricserver.php  readme.md  server.php
.github/workflows/: ci.yml
clients/php/src/: ServerdensityUDPAgent.php
examples/: serverdensity_config_file.cfg
examples/php/: client.php  composer.json
examples/ruby/: client.rb
openmetrics_udpserver/: Cargo.toml
openmetrics_udpserver/src/: config.rs  http_server.rs  main.rs  processor.rs  udp_server.rs
openmetrics_udpserver/src/aggregator/: average.rs  min.rs  mod.rs  peak.rs
openmetrics_udpserver/src/metrics/: counter.rs  gauge.rs  mod.rs  resetting_counter.rs  resetting_value_metric.rs
openmetrics_udpserver/src/serverdensity/: aggregator.rs  mod.rs
openmetrics_udpserver_lib/: Cargo.toml
openmetrics_udpserver_lib/src/: lib.rs
serverdensity_udpserver/: Cargo.toml
serverdensity_udpserver/src/: aggregator.rs  config.rs  main.rs  udpserver.rs
serverdensity_udpserver_lib/: Cargo.toml
src/: aggregator.rs  config.rs  main.rs  udpserver.rs
src/handler/: mod.rs
src/lib/: lib.rs
