[package]
name = "openmetrics_udpserver"
version = "0.1.0"
authors = ["timglabisch <tim@ainfach.de>"]
edition = "2021"

[dependencies]
anyhow = "*"
clap = "4.4.*"
bytes = "1.5.*"
regex = "1.10.*"
byteorder = "1.5.*"
prometheus-client = "0.21.*"
hyper = { version = "0.14.*", features = ["http2", "server"] }
tokio = { version = "1.33.*", features = ["macros", "rt-multi-thread", "signal", "sync"] }
axum = { version = "0.6.*", features = ["macros", "http1", "tokio"], default-features = false }
openmetrics_udpserver_lib = { path = "../openmetrics_udpserver_lib" }
fnv = "1.*"

# servedensity specific deps
md5 = "0.7.*"
reqwest = { version = "0.11.*", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"] }
once_cell = "1.18.0"
