[package]
name = "openmetrics_udpserver"
version = "0.1.0"
authors = ["timglabisch <tim@ainfach.de>"]
edition = "2021"

[dependencies]
fnv = "1.*"
anyhow = "*"
clap = "4.5.*"
bytes = "1.6.*"
regex = "1.10.*"
byteorder = "1.5.*"
prometheus-client = "0.22.*"
tokio = { version = "1.37.*", features = ["macros", "rt-multi-thread", "signal", "sync"] }
axum = { version = "0.7.*", features = ["macros", "http1", "tokio"], default-features = false }
openmetrics_udpserver_lib = { path = "../openmetrics_udpserver_lib" }

# servedensity specific deps
md5 = "0.7.*"
once_cell = "1.*"
reqwest = { version = "0.12.*", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"] }
