[package]
name = "serverdensity_udpserver"
version = "0.1.0"
authors = ["timglabisch <tim@ainfach.de>"]
edition = "2021"

[dependencies]
byteorder = "1.4.*"
reqwest = { version = "0.11.*", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "blocking"] }
clap = "3.0.*"
url = "2.*"
md5 = "0.7.*"
regex = "1.*"
bytes = "1.*"
serverdensity_udpserver_lib = { path = "../serverdensity_udpserver_lib" }